# CMake-OpenGL-Template

./: .gitignore  CMakeLists.txt  README.md  linux_setup.sh  win_setup.bat
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb_image/: CMakeLists.txt
src/: Main.cpp
